# tidb-vector-bench

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  run_tidb_benchmark.sh
config/: config.yaml
src/tidb_vector_bench/: __init__.py  __main__.py  main.py
src/tidb_vector_bench/benchmark/: monitor.py  perf.py  recall.py
src/tidb_vector_bench/config/: config.py
src/tidb_vector_bench/data/: generate.py
src/tidb_vector_bench/db/: loader.py
